--- a/tictactoe/templates/tictactoe/index.html
+++ b/tictactoe/templates/tictactoe/index.html
@@ -12,7 +12,8 @@
             {% if winner %}
                 <h2 class="has-text-centered">{{ winner }} </h2>
             {% else %}
-                <h2 class="has-text-centered">Current turn: {{ current_turn }}</h2>
+{#                <h2 class="has-text-centered">Current turn: {{ current_turn }}</h2>#}
+                <a class="button" href="clear/"> clear</a>
             {% endif %}
 
             <form method="post">
