--- a/tictactoe/templates/tictactoe/index.html
+++ b/tictactoe/templates/tictactoe/index.html
@@ -9,22 +9,27 @@
         <h1></h1>
         <div class="container">
             <h1 class="title has-text-centered">Tic Tac Toe</h1>
-            {% if winner %}
-                <h2 class="has-text-centered">{{ winner }} </h2>
-            {% else %}
-{#                <h2 class="has-text-centered">Current turn: {{ current_turn }}</h2>#}
-                <a class="button" href="clear/"> clear</a>
-            {% endif %}
 
-            <form method="post">
-                <div class="tic-tac-toe">
-                    {% csrf_token %}
-                    {% for value in board %}
-                        <button class="button" type="submit" name="index"
-                                value="{{ forloop.counter0 }}">{{ value }}</button>
-                    {% endfor %}
-                </div>
-            </form>
+{#            <div class="columns ">#}
+
+
+                {% if create_game %}
+                    <div class="box py-5 my-5 has-text-centered">
+                        {% include "tictactoe/game_creation.html" %}
+                    </div>
+
+                {% else %}
+                    <a class="button" href="clear/"> New Game</a>
+                    {% if winner %}
+                        <h2 class="has-text-centered">{{ winner }} </h2>
+                    {% else %}
+                        <h2 class="has-text-centered">Current difficulty: {{ difficulty }}</h2>
+                    {% endif %}
+                    {% include "tictactoe/game_board.html" %}
+                {% endif %}
+{#            </div>#}
+
+
         </div>
     </section>
 {% endblock %}
